infra/k8s/overlays/dev/webui-url-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
  namespace: azuredocs-app
spec:
  template:
    spec:
      containers:
        - name: webui
